--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -10,7 +10,7 @@
 	<div class="py-5 text-center">
 	<div class="row">
 		<div class="column">
-				<div class="contain">
+				<div class="contain" style = "background: white;">
 					<form action="." method="post" class="order-form">
 						{{ form.as_p }}
 						<p><input class="w3-button w3-round-large w3-blue-grey"type="submit" value="Place order"></p>
