--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -60,7 +60,7 @@
 			}
 	</style>
 	</head>
-	<body id="top" data-spy="scroll" data-target=".navbar" data-offset="50" class="scrollbar carousel slide" id="style-2" data-ride="carousel" >
+	<body id="top" data-spy="scroll" data-target=".navbar" data-offset="50" class="scrollbar carousel slide bg-light" id="style-2" data-ride="carousel" >
 
 	<!--loader start of loader -->
  	<div class="loader" style="background-image: url({% static 'img/seabackground.jpg' %})">
