--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -13,7 +13,7 @@
 	<table class="table">
 		<thead class="thead-light">
 			<tr><strong>
-				<th>Image</th>
+				<th style="max-width: 50px;">Image</th>
 				<th>Product</th>
 				<th>Quantity</th>
 				<th>Remove</th>
@@ -37,7 +37,7 @@
 							<form "action="{% url 'cart:cart_add' product.id %}" method="post">
 								{{ item.update_quantity_form.quantity }}
 								{{ item.update_quantity_form.update }}
-								<input  " class="w3-button w3-round-large w3-blue-grey" type="submit" value="Update">
+								<input type="submit"  class="w3-button w3-round-large w3-blue-grey" value="Update">
 								{% csrf_token %}
 							</form>
 						</td>
