--- a/orders/templates/admin/orders/order/detail.html
+++ b/orders/templates/admin/orders/order/detail.html
@@ -45,6 +45,10 @@
 			<td>{{ order.get_mode_display }}</td>
 		</tr>
 		<tr>
+			<th>Claim</th>
+			<td>{{ order.get_claim_display }}</td>
+		</tr>
+		<tr>
 			<th>Total amount</th>
 			<td>PHP {{ order.get_total_cost }}</td>
 		</tr>
