--- a/shop/static/css/base.css
+++ b/shop/static/css/base.css
@@ -64,7 +64,7 @@ form p select{
     background:#efefef;
 }
 
-form input {
+form p input{
     width:320px;
     font-size:13px;
     margin-bottom:10px;
